--- a/RettroixEngineZero/RettroixEngineZero/RettroixEngineZero.vcxproj
+++ b/RettroixEngineZero/RettroixEngineZero/RettroixEngineZero.vcxproj
@@ -154,12 +154,14 @@
     <ClCompile Include="Rettroix.cpp" />
     <ClCompile Include="SplashScreen.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="VisibleGameObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="SplashScreen.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="VisibleGameObject.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="images\splash.png" />
