--- a/RettroixEngineZero/RettroixEngineZero/RettroixEngineZero.vcxproj
+++ b/RettroixEngineZero/RettroixEngineZero/RettroixEngineZero.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="Rettroix.cpp" />
     <ClCompile Include="ServiceLocator.cpp" />
     <ClCompile Include="SFMLSoundProvider.cpp" />
+    <ClCompile Include="SoundFileCache.cpp" />
     <ClCompile Include="SplashScreen.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="VisibleGameObject.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="PlayerPaddle.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="SFMLSoundProvider.h" />
+    <ClInclude Include="SoundFileCache.h" />
     <ClInclude Include="SplashScreen.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="VisibleGameObject.h" />
