--- a/RettroixEngineZero/RettroixEngineZero/RettroixEngineZero.vcxproj
+++ b/RettroixEngineZero/RettroixEngineZero/RettroixEngineZero.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="GameObjectManager.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="PlayerPaddle.cpp" />
+    <ClCompile Include="RectangleObject.cpp" />
     <ClCompile Include="Rettroix.cpp" />
     <ClCompile Include="ServiceLocator.cpp" />
     <ClCompile Include="SFMLSoundProvider.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="IAudioProvider.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="PlayerPaddle.h" />
+    <ClInclude Include="RectangleObject.h" />
     <ClInclude Include="ServiceLocator.h" />
     <ClInclude Include="SFMLSoundProvider.h" />
     <ClInclude Include="SoundFileCache.h" />
