--- a/RettroixEngineZero/RettroixEngineZero/RettroixEngineZero.vcxproj.filters
+++ b/RettroixEngineZero/RettroixEngineZero/RettroixEngineZero.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="RectangleObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Brick.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RectangleObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Brick.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
